--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@chakra-ui/theme-tools": "^2.1.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@million/lint": "latest",
     "@sentry/nextjs": "^7.103.0",
     "@tauri-apps/api": "^1.5.3",
     "emoji-datasource": "^15.1.2",
     "framer-motion": "^11.0.6",
     "memoizee": "^0.4.15",
+    "million": "^3.0.6",
     "next": "14.1.0",
     "next-seo": "^6.5.0",
     "next-sitemap": "^4.2.3",
